# advanced_modern_cpp

exercise_1_1/: CMakeLists.txt  package.xml
exercise_1_1/include/exercise_1_1/: exercise_1_1.h
exercise_1_1/src/: exercise_1_1.cpp  main.cpp
exercises_unit_2/: CMakeLists.txt
exercises_unit_2/src/: lists.cpp  path_coordinates.cpp  path_coordinates_map.cpp  robot_heading_as_deque.cpp  robot_heading_as_vector.cpp  robot_position_as_array.cpp
my_robot_manager/: CMakeLists.txt  package.xml
my_robot_manager/include/: robot_manager.h
my_robot_manager/notes/: exercise_3_11_this.txt
my_robot_manager/src/: robot_manager.cpp  robot_manager_node.cpp
robot_manager_composition/: CMakeLists.txt
robot_manager_composition/include/robot_manager_composition/: robot_manager_composition.h
robot_manager_composition/src/: robot_manager_composition.cpp  robot_manager_composition_node.cpp
robot_manager_inheritance/: CMakeLists.txt
robot_manager_inheritance/include/robot_manager_inheritance/: base_robot_manager.h  mobile_robot_robot_manager.h
robot_manager_inheritance/src/: base_robot_manager.cpp  mobile_robot_robot_manager.cpp
stl_lib/: list_.cpp
unit3_demos/: copy_constructor  copy_constructor.cpp  demo_310  demo_310.cpp  demo_312a  demo_383  demo_383.cpp
unit4_demos/: demo_4_1  demo_4_3_1  demo_4_3_2  demo_4_4  demo_4_5  demo_4_6  demo_4_7  demo_4_8_1  demo_4_8_2  exercise_4_2_1.cpp
